<?xml version="1.0"?>
<package format="2">
  <name>g2o_catkin</name>
  <version>0.0.0</version>
  <description>The g2o_catkin package</description>
  <maintainer email="bence@todo.todo">bence</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
